--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.scss
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.scss
@@ -105,7 +105,7 @@ h1 {
     }
 }
 
-::ng-deep .mat-chip.mat-standard-chip {
+.mat-chip.mat-standard-chip {
     background-color: #D6DCE5;
     font-style: normal;
     font-weight: normal;
