--- a/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.scss
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.scss
@@ -93,15 +93,20 @@
 }
 
 .employee-type {
-  display: block;
-  margin-top: 10px;
+  margin-top: 5px;
 
   .slider-icon {
     margin-right: 5px !important;
   }
 
   span.employee-type-item {
+    display: inline-block;
     margin-right: 10px !important;
+
+    @media screen and (max-width: 445px) {
+      display: block;
+      padding-bottom: 5px;
+    }
   }
 }
 
@@ -115,32 +120,6 @@
   @media screen and (max-width: 767px) {
     display: none;
   }
-}
-
-.employee-cert {
-  p {
-    display: block;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 13px;
-    line-height: 20px;
-    color: #000;
-    margin-bottom: 5px;
-  }
-
-  .certs {
-    display: block;
-  }
-}
-
-.mat-chip.mat-standard-chip {
-  color: #626262;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 13px;
-  line-height: 20px;
 }
 
 .btn-mentor {
@@ -194,26 +173,34 @@
 
   .employee-minor-details-element {
     margin-left: 10px;
+    display: inline-block;
   }
 
   @media screen and (max-width: 445px) {
-    float: center;
-    margin: 0px;
+    float: left;
+    margin-left: 29%;
+    display: block;
 
     .employee-minor-details-element {
-      margin: 10px 30px 0px 30px;
+      display: block;
+      padding-bottom: 5px;
     }
   }
 }
 
 .employee-skills-display {
-  margin-top: 25px;
+  margin-top: 30px;
+
+  @media screen and (max-width: 450px) {
+    margin-top: 50px;
+    margin-bottom: 20px;
+  }
 
   .employee-skill-display {
-    padding: 7px 10px 0px 0px;
+    padding: 3px 7px 0px 0px;
 
     @media screen and (max-width: 450px) {
-      padding: 10px 20px 0px 30px;
+      padding: 0;
     }
   }
 
@@ -223,8 +210,9 @@
     font-weight: normal;
     font-size: 14px;
     color: #000000;
+    padding-bottom: 5px;
 
-    @media screen and (max-width: 450px) {
+    @media screen and (max-width: 768px) {
       text-align: left;
     }
   }
@@ -232,6 +220,7 @@
   .employee-rating-bar {
     margin-top: auto;
     margin-bottom: auto;
+    padding-bottom: 10px;
   }
 
   .progress-bar {
@@ -268,3 +257,47 @@
     text-decoration: underline;
   }
 }
+
+.employee-certifications {
+
+  .col-md-10{
+    padding-left: 7px;
+  }
+
+  .employee-cert {
+    p {
+      display: block;
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 13px;
+      color: #000;
+      margin-bottom: 5px;
+    }
+  
+    .certs {
+      display: block;
+    }
+  }
+
+  .cert-list {
+    display: inline-block;
+    color: #626262;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 13px;
+    padding: 5px 10px;
+    background-color: #EAEDEF;
+    border-radius: 20px;
+    margin: 0px 5px 5px 0px;
+  }
+
+  @media screen and (max-width: 768px) {
+    .col-md-10{
+      padding-left: 15px;
+    }
+  }
+}
+
+
