Rearrange search filter form

--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.html
@@ -27,24 +27,26 @@
                                 <app-search-skill-input (searchSkillEvent)="skillMessage($event)">
                                 </app-search-skill-input>
                             </div>
-                            <div class="col-lg-3">
+                            <div class="col-lg-5">
                                 <app-search-certification-input (searchCertEvent)="certMessage($event)"></app-search-certification-input>
                             </div>
-                            <div class="col-lg-2">
+                            <!-- <div class="col-lg-2">
                                 <app-search-location-input (searchLocationEvent)="locationMessage($event)">
                                 </app-search-location-input>
-
-                            </div>
+                            </div> -->
                         </div>
                         <div class="row">
-                            <div class="col-lg-3">
+                            <div class="col-lg-4">
                                 <app-search-name-input (searchNameEvent)="nameMessage($event)"></app-search-name-input>
                             </div>
                             <div class="col-lg-3">
                                 <app-search-avail-input (searchAvailEvent)="availMessage($event)">
                                 </app-search-avail-input>
                             </div>
-
+                            <div class="col-lg-3">
+                                <app-search-location-input (searchLocationEvent)="locationMessage($event)">
+                                </app-search-location-input>
+                            </div>
                         </div>
                     </div>
                     <div class="col-lg-2 filter-form-buttons">
