Add few items to employee profile, fix scrolling matToolTip

--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-hero/employee-hero.component.scss
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-hero/employee-hero.component.scss
@@ -28,6 +28,11 @@ $medium-screen: 900px;
 .employee-general {
   padding-left: 50px;
 
+  p {
+    display: inline-block;
+    padding-right: 5px;
+  }
+
   @media screen and (max-width: $small-screen) {
     padding-left: 0px;
   }
