--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-hero/employee-hero.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-hero/employee-hero.component.html
@@ -2,14 +2,14 @@
     <div class="row employee-hero">
         <div class="col-md-3">
             <div class="display-picture">
-                <img class="image mx-auto my-auto d-block" src="https://prokarma001.sharepoint.com/_layouts/15/userphoto.aspx?size=M&accountname={{employeeHeroDetails.email}}" alt="Avatar"
+                <img class="image mx-auto my-auto d-block" [src]="displayPicture" alt="Avatar"
                     accept="image/x-png,image/gif,image/jpeg">
             </div>
         </div>
         <div class="col-md-9">
             <div class="employee-general">
                 <h1>{{employeeHeroDetails.fullName}}</h1>
-                <p>{{employeeHeroDetails.role}}</p>
+                <p>{{employeeHeroDetails.role}}</p><p *ngIf="employeeHeroDetails.employeeId">({{ isEmployee ? 'Employee' : 'Contractor'}})</p>
                 <div class="employee-buttons">
                     <button *ngIf="employeeHeroDetails.isMvp" type="button" class="btn btn-mvp">
                         <fa-icon class="slider-icon" [icon]="faTrophy" size="md"></fa-icon>
