Fix mobile card css & change title

--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.html
@@ -2,7 +2,7 @@
     <div class="title" id="title">
         <div class="row">
             <div class="col-8">
-                <h1>Find Consultants</h1>
+                <h1>Find Talent</h1>
             </div>
             <!-- <div class="col-4">
                 <div *ngIf="isMobile" class="slider" (click)="toggleSearch()">
