--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-experience/employee-experience.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-experience/employee-experience.component.html
@@ -2,7 +2,7 @@
         <!-- {{employeeExperienceDetails | json}} -->
         <div class="employee-about" *ngIf="employeeExperienceDetails?.roleDescription">
                 <h1>About</h1>
-                <p >{{employeeExperienceDetails.roleDescription}}</p>
+                <p>{{employeeExperienceDetails.roleDescription}}</p>
         </div>
         <div class="employee-projects">
                 <h1>Experience</h1>
@@ -51,6 +51,9 @@
                         <hr>
                 </div>
         </div>
-        <h1>Certifications</h1>
-        <span class="employee-certificate" *ngFor="let certificate of certifications">{{certificate}} <br></span>
+        <div *ngIf="certifications.length > 0">
+                <h1>Certifications</h1>
+                <span class="employee-certificate" *ngFor="let certificate of certifications">{{certificate.certificationName}}
+                        <br></span>
+        </div>
 </div>
