--- a/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.html
@@ -110,4 +110,12 @@
             </div>
         </div>
     </div>
+    <div class="row view-profile">
+        <div class="col-md-6 offset-md-3">
+                <span class="btn-view-more-skills" (click)="goToProfile(employee.resourceId)">
+                        <fa-icon class="slider-icon" [icon]="faChevronDown" size="sm"></fa-icon>
+                        View Profile
+                </span>
+        </div>
+    </div>
 </div>
