--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-profile/employee-profile.component.scss
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-profile/employee-profile.component.scss
@@ -1,9 +1,14 @@
 $small-screen: 500px;
+$medium-screen: 900px;
 
 .employee-profile {
   background: url(../../../../assets/images/employee-profile-bg.png) no-repeat;
   background-size: 100% 20%, cover;
   height: 100%;
+
+  @media screen and (max-width: $medium-screen) {
+    background-size: 100% 7%, cover;
+  }
 
   @media screen and (max-width: $small-screen) {
     background-size: 100% 7%, cover;
